[package]
name = "sx_dpki"
version = "0.0.46-alpha1"
description = "holochain dpki"
license = "GPL-3.0-only"
homepage = "https://github.com/Holo-host/holochain-2020"
documentation = "https://github.com/Holo-host/holochain-2020"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
base64 = "0.10.1"
sx_types = { path = "../types" }
newrelic = "0.2"
lib3h_sodium = "0.0.38"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.51", features = ["preserve_order"] }
hcid = "0.0.6"
bip39 = "0.6.0-beta.1"
holochain_common = { version = "0.0.46-alpha1" }
