[package]
name = "ffs"
version = "0.0.1"
authors = ["Michael Dougherty <maackle.d@gmail.com>"]
edition = "2018"
description = "A wrapper around file access to provide clearer user-facing errors."
license = "Apache-2.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://github.com/holochain/holochain"

[dependencies]
backtrace = { version = "0.3", optional = true }
cfg-if = "0.1"
derive_more = "0.99"
dunce = "1.0"
tokio = { version = "1.6", features = ["fs"], optional = true}

[features]
