[package]
name = "fixt"
version = "0.0.11"
description = "minimum viable fixtures"
license = "Apache-2.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/fixt"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
keywords = [ "holochain", "holo", "test", "fixture" ]
categories = [ "fixtures" ]
edition = "2021"

[dependencies]
holochain_serialized_bytes = "=0.0.51"
lazy_static = "1.4"
parking_lot = "0.10"
paste = "=1.0.5"
rand = "0.7"
rand_core = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
strum = "0.18.0"
strum_macros = "0.18.0"

[features]
fixt = [ ]
