[package]
name = "sx_fixture"
version = "0.0.1"
description = "Holochain fixture trait"
license = "GPL-3.0-only"
homepage = "https://github.com/Holo-host/holochain-2020"
documentation = "https://github.com/Holo-host/holochain-2020"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
