[package]
name = "hc-sleuth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
holochain_state = { path = "../holochain_state" }
kitsune_p2p = { version = "^0.3.0-beta-dev.18", path = "../kitsune_p2p/kitsune_p2p" }

[dev-dependencies]
arbitrary = { version = "1.0", features = ["derive"] }
hc-sleuth = { path = ".", features = ["test_utils"]}

[features]

test_utils = [
    "holochain_state/fuzzing",
    "kitsune_p2p/fuzzing",
    "holochain_state/test_utils",
    "kitsune_p2p/test_utils",
]