[package]
name = "holochain_cli"
version = "0.2.8-rc.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/holochain_cli"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo"]
categories = ["command-line-utilities", "development-tools::build-utils", "filesystem"]
edition = "2021"
license = "Apache-2.0"
description = "Provides the `hc` binary, a helpful CLI tool for working with Holochain."

[[bin]]
name = "hc"
path = "src/bin/hc.rs"

[lib]
name = "holochain_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = [ "derive", "cargo" ] }
futures = "0.3"
lazy_static = "1.4"
holochain_cli_bundle = { path = "../hc_bundle", version = "^0.2.7"}
holochain_cli_sandbox = { path = "../hc_sandbox", version = "^0.2.8-rc.0"}
holochain_cli_run_local_services = { path = "../hc_run_local_services", version = "^0.2.7"}
holochain_trace = { version = "^0.2.7", path = "../holochain_trace" }
tokio = { version = "1.27", features = ["full"] }

[features]

chc = [
    "holochain_cli_sandbox/chc"
]
