[package]
name = "holochain_cli"
version = "0.7.0-dev.2"
repository = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/holochain_cli"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo"]
categories = [
  "command-line-utilities",
  "development-tools::build-utils",
  "filesystem",
]
edition = "2021"
license = "Apache-2.0"
description = "Provides the `hc` binary, a helpful CLI tool for working with Holochain."

[[bin]]
name = "hc"
path = "src/bin/hc.rs"

[lib]
name = "holochain_cli"
path = "src/lib.rs"

# reminder - do not use workspace deps
[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "cargo"] }
lazy_static = "1.4"
holochain_cli_bundle = { path = "../hc_bundle", version = "^0.7.0-dev.2", default-features = false }
holochain_cli_sandbox = { path = "../hc_sandbox", version = "^0.7.0-dev.2", default-features = false }
holochain_cli_client = { path = "../hc_client", version = "^0.7.0-dev.2", default-features = false }
holochain_trace = { version = "^0.7.0-dev.0", path = "../holochain_trace" }
tokio = { version = "1.36.0", features = ["full"] }

[lints]
workspace = true

[features]
default = ["wasmer_sys"]

wasmer_sys = [
  "holochain_cli_sandbox/wasmer_sys",
  "holochain_cli_client/wasmer_sys",
]
wasmer_wamr = [
  "holochain_cli_sandbox/wasmer_wamr",
  "holochain_cli_client/wasmer_wamr",
]

chc = ["holochain_cli_sandbox/chc"]
