[package]
name = "holochain_cli_bundle"
version = "0.4.0-dev.22"
description = "DNA and hApp bundling functionality for the `hc` Holochain CLI utility"
license = "Apache-2.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/holochain_cli_bundle"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo"]
categories = [
  "command-line-utilities",
  "development-tools::build-utils",
  "filesystem",
]
edition = "2021"

[[bin]]
name = "hc-app"
path = "src/bin/hc-app.rs"

[[bin]]
name = "hc-dna"
path = "src/bin/hc-dna.rs"

# reminder - do not use workspace deps
[dependencies]
holochain_wasmer_host = "=0.0.96"
futures = "0.3"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
holochain_util = { version = "^0.4.0-dev.4", path = "../holochain_util", features = [
  "backtrace",
] }
holochain_serialized_bytes = "=0.0.55"
holochain_types = { version = "^0.4.0-dev.22", path = "../holochain_types" }
mr_bundle = { version = "^0.4.0-dev.7", path = "../mr_bundle" }
serde_yaml = "0.9"
thiserror = "1.0.22"
tracing = "0.1"
tokio = { version = "1.27", features = ["full"] }
wasmer = "=4.3.6"

[dev-dependencies]
assert_cmd = "2.0"
matches = "0.1"
predicates = "3.0"
tempfile = "3"
serde_json = "1.0"
jsonschema = "0.17"
walkdir = "2"

[lints]
workspace = true

[features]
sqlite-encrypted = ["holochain_types/sqlite-encrypted"]
sqlite = ["holochain_types/sqlite"]
