[package]
name = "holochain_cli_bundle"
version = "0.5.0-dev.1"
description = "DNA and hApp bundling functionality for the `hc` Holochain CLI utility"
license = "Apache-2.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/holochain_cli_bundle"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo"]
categories = [
  "command-line-utilities",
  "development-tools::build-utils",
  "filesystem",
]
edition = "2021"

[[bin]]
name = "hc-app"
path = "src/bin/hc-app.rs"

[[bin]]
name = "hc-dna"
path = "src/bin/hc-dna.rs"

# reminder - do not use workspace deps
[dependencies]
holochain_wasmer_host = { version = "=0.0.96", default-features = false }
futures = "0.3"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
holochain_util = { version = "^0.5.0-dev.0", path = "../holochain_util", features = [
  "backtrace",
] }
holochain_serialized_bytes = "=0.0.55"
holochain_types = { version = "^0.5.0-dev.1", path = "../holochain_types" }
mr_bundle = { version = "^0.5.0-dev.0", path = "../mr_bundle" }
serde_yaml = "0.9"
thiserror = "1.0.22"
tracing = "0.1"
tokio = { version = "1.27", features = ["full"] }

# Temporarily include a fork of wasmer from the git branch 'wamr', until it is officially released in wasmer v5
hc-wasmer = { version = "=4.3.6-hc.1", optional = true, default-features = false }
wasmer = { version = "=4.3.6", optional = true, default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
matches = "0.1"
predicates = "3.0"
tempfile = "3"
serde_json = "1.0"
jsonschema = "0.17"
walkdir = "2"

[lints]
workspace = true

[features]
default = ["wasmer_sys"]

sqlite-encrypted = ["holochain_types/sqlite-encrypted"]
sqlite = ["holochain_types/sqlite"]

wasmer_sys = [
  "dep:wasmer",
  "wasmer/default",
  "holochain_wasmer_host/wasmer_sys",
]
wasmer_wamr = [
  "dep:hc-wasmer",
  "hc-wasmer/wamr",
  "holochain_wasmer_host/wasmer_wamr",
]
