[package]
name = "holochain_cli_bundle"
version = "0.6.0-dev.31"
description = "DNA and hApp bundling functionality for the `hc` Holochain CLI utility"
license = "Apache-2.0"
repository = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/holochain_cli_bundle"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo"]
categories = [
  "command-line-utilities",
  "development-tools::build-utils",
  "filesystem",
]
edition = "2021"

[[bin]]
name = "hc-app"
path = "src/bin/hc-app.rs"

[[bin]]
name = "hc-dna"
path = "src/bin/hc-dna.rs"

# reminder - do not use workspace deps
[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
holochain_util = { version = "^0.6.0-dev.5", path = "../holochain_util", features = [
  "backtrace",
] }
holochain_serialized_bytes = "=0.0.56"
holochain_types = { version = "^0.6.0-dev.31", path = "../holochain_types" }
mr_bundle = { version = "^0.6.0-dev.8", path = "../mr_bundle", features = [
  "fs",
] }
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.27", features = ["full"] }
schemars = "0.9"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
matches = "0.1"
tempfile = "3"
serde_json = "1.0"
jsonschema = "0.30"
walkdir = "2"

[lints]
workspace = true

[features]
sqlite-encrypted = ["holochain_types/sqlite-encrypted"]
sqlite = ["holochain_types/sqlite"]

unstable-migration = ["holochain_types/unstable-migration"]
