[package]
name = "holochain_cli_util"
version = "0.3.0-beta-dev.24"
homepage = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/holochain_cli_util"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo"]
categories = ["command-line-utilities"]
edition = "2021"
license = "Apache-2.0"
description = "Debugging and diagnostic utilities for Holochain developers."

[[bin]]
name = "hc-util"
path = "src/bin/hc-util.rs"

[dependencies]
clap = { version = "4.0", features = [ "derive" ] }
futures = "0.3.28"
holochain_trace = { version = "^0.3.0-beta-dev.8", path = "../holochain_trace" }
kitsune_p2p_dht = { version = "^0.3.0-beta-dev.19", path = "../kitsune_p2p/dht" }
kitsune_p2p_dht_arc = { version = "^0.3.0-beta-dev.17", path = "../kitsune_p2p/dht_arc" }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
