[package]
name = "holochain_cli_client"
version = "0.7.0-dev.6"
edition = "2021"
description = "CLI utilities for interacting with Holochain conductors"
license = "Apache-2.0"
repository = "https://github.com/holochain/holochain"

[[bin]]
name = "hc-client"
path = "src/bin/hc-client.rs"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
chrono = { version = "0.4.22", default-features = false, features = [
  "clock",
  "std",
  "oldtime",
  "serde",
] }
clap = { version = "4.0", features = ["derive", "env"] }
ed25519-dalek = "2.1"
hc_serde_json = { version = "1", package = "hc_serde_json" }
holo_hash = { version = "^0.7.0-dev.2", path = "../holo_hash", features = [
  "kitsune2",
] }
holochain_client = { version = "^0.9.0-dev.6", path = "../client", default-features = false }
holochain_conductor_api = { path = "../holochain_conductor_api", version = "^0.7.0-dev.6", features = [
  "sqlite",
] }
holochain_types = { path = "../holochain_types", version = "^0.7.0-dev.6", features = [
  "sqlite",
] }
holochain_util = { version = "^0.7.0-dev.0", path = "../holochain_util", features = [
  "pw",
] }
kitsune2_api = "0.4.0-dev.2"
kitsune2_core = "0.4.0-dev.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sodoken = "0.1.0"
tokio = { version = "1.36.0", features = ["full"] }
indexmap = "2.0"

holochain = { version = "^0.7.0-dev.6", path = "../holochain", default-features = false, optional = true }

[dev-dependencies]
holochain = { version = "^0.7.0-dev.6", path = "../holochain", default-features = false, features = [
  "sweettest",
] }
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0"
tempfile = "3.0"

[features]
default = ["wasmer_sys", "holochain?/transport-tx5-datachannel-vendored"]

wasmer_sys = ["holochain_client/wasmer_sys", "holochain?/wasmer_sys"]
wasmer_wamr = ["holochain_client/wasmer_wamr", "holochain?/wasmer_wamr"]

[lints]
workspace = true
