[package]
name = "holochain_cli_client"
version = "0.7.0-dev.32"
edition = "2021"
description = "CLI utilities for interacting with Holochain conductors"
license = "Apache-2.0"
repository = "https://github.com/holochain/holochain"

[[bin]]
name = "hc-client"
path = "src/bin/hc-client.rs"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
chrono = { version = "0.4.22", default-features = false, features = [
  "clock",
  "std",
  "oldtime",
  "serde",
] }
clap = { version = "4.0", features = ["derive", "env"] }
ed25519-dalek = "2.1"
hc_serde_json = { version = "1", package = "hc_serde_json" }
holo_hash = { version = "^0.7.0-dev.11", path = "../holo_hash", features = [
  "kitsune2",
] }
holochain_client = { version = "^0.9.0-dev.32", path = "../client", default-features = false }
holochain_conductor_api = { path = "../holochain_conductor_api", version = "^0.7.0-dev.31" }
holochain_types = { path = "../holochain_types", version = "^0.7.0-dev.31" }
holochain_util = { version = "^0.7.0-dev.1", path = "../holochain_util", features = [
  "pw",
] }
kitsune2_api = "0.5.0-dev.6"
kitsune2_core = "0.5.0-dev.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml_serde = "0.10"
sodoken = "0.1.0"
tokio = { version = "1.36.0", features = ["full"] }
indexmap = "2.0"

holochain = { version = "^0.7.0-dev.32", path = "../holochain", default-features = false, optional = true }

[dev-dependencies]
holochain = { version = "^0.7.0-dev.32", path = "../holochain", default-features = false, features = [
  "sweettest",
] }
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0"
tempfile = "3.0"

[features]
default = ["wasmer-sys-cranelift"]

wasmer-sys-cranelift = [
  "holochain_client/wasmer-sys-cranelift",
  "holochain?/wasmer-sys-cranelift",
]
wasmer-wasmi = ["holochain_client/wasmer-wasmi", "holochain?/wasmer-wasmi"]

[lints]
workspace = true
