[package]
name = "hc_deepkey_sdk"
version = "0.7.0-dev.6"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/hc_deepkey_sdk"
description = "SDK for the Deepkey DNA Zomes"
readme = "README.md"


[dependencies]
hc_deepkey_types = { version = "^0.8.0-dev.6", path = "../hc_deepkey_types" }

# TODO: remove path designation to allow this crate to trail behind the current monorepo version
hdk = { version = "^0.4.0-dev.17", path = "../hdk" }
serde = "1"
serde_bytes = "0.11"

arbitrary = { version = "1.0", features = ["derive"], optional = true }

[features]
fuzzing = ["arbitrary", "hc_deepkey_types/fuzzing", "hdk/fuzzing"]
