[package]
name = "hc_deepkey_sdk"
version = "0.8.5"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/hc_deepkey_sdk"
description = "SDK for the Deepkey DNA Zomes"
readme = "README.md"


[dependencies]
hc_deepkey_types = { version = "^0.9.5", path = "../hc_deepkey_types" }

# TODO: remove path designation to allow this crate to trail behind the current monorepo version
hdk = { version = "^0.5.5", path = "../hdk" }
serde = "1"
serde_bytes = "0.11"
holochain_serialized_bytes = "=0.0.56"

[features]
fuzzing = ["hc_deepkey_types/fuzzing", "hdk/fuzzing"]
