[package]
name = "hc_deepkey_types"
version = "0.8.0-dev.2"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"
license = "CAL-1.0"
repository = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/hc_deepkey_types"
description = "Definitions used by the Deepkey DNA Zomes"
readme = "README.md"

[lib]
name = "hc_deepkey_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdi = "=0.5.0-dev.10"
holo_hash = { version = "=0.4.0-dev.9", features = ["hashing", "encoding"] }
holochain_integrity_types = "=0.4.0-dev.10"
rmpv = { version = "1", features = ["with-serde"] }
serde = "1"

arbitrary = { version = "1.0", features = ["derive"], optional = true }


[features]
fuzzing = [
  "arbitrary",
  # "hdi/fuzzing",
  "holochain_integrity_types/fuzzing",
  "holo_hash/fuzzing",
]
