[package]
name = "hc_deepkey_types"
version = "0.9.3"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/holochain/holochain"
documentation = "https://docs.rs/hc_deepkey_types"
description = "Definitions used by the Deepkey DNA Zomes"
readme = "README.md"

[dependencies]
# TODO: remove path designation to allow this crate to trail behind the current monorepo version
hdi = { version = "^0.6.3", path = "../hdi" }
holo_hash = { version = "^0.5.3", path = "../holo_hash", features = [
  "hashing",
  "encoding",
] }
holochain_integrity_types = { version = "^0.5.3", path = "../holochain_integrity_types" }
rmpv = { version = "1", features = ["with-serde"] }
serde = "1"
holochain_serialized_bytes = "=0.0.56"

[features]
fuzzing = [
  "hdi/fuzzing",
  "holochain_integrity_types/fuzzing",
  "holo_hash/fuzzing",
]
