[package]
name = "hc_demo_cli"
version = "0.2.0-beta-rc.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.1.11", features = [ "derive", "wrap_help" ], optional = true }
flate2 = { version = "1.0.25", optional = true }
hdi = { path = "../hdi", version = "0.3.0-beta-rc.0", optional = true }
hdk = { path = "../hdk", version = "0.2.0-beta-rc.0", optional = true }
holochain = { path = "../holochain", version = "0.2.0-beta-rc.0", optional = true }
holochain_types = { path = "../holochain_types", version = "0.2.0-beta-rc.0", optional = true }
holochain_keystore = { path = "../holochain_keystore", version = "0.2.0-beta-rc.0", optional = true }
rand = { version = "0.8.5", optional = true }
rand-utf8 = { version = "0.0.1", optional = true }
serde = { version = "1", optional = true }
tokio = { version = "1.26.0", features = [ "full" ], optional = true }
tracing = { version = "0.1.37", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true }

# Special config for when we're in build_wasm mode
[target.'cfg(build_wasm)'.build-dependencies]
flate2 = "1.0.25"
wasm-opt = "0.112.0"

[features]
default = [ "build_demo" ]

# The default demo feature builds the actual demo lib / executable.
build_demo = [ "clap", "flate2", "hdi", "hdk", "serde", "tokio", "holochain", "holochain_types", "holochain/test_utils", "holochain/tx5", "holochain_keystore", "rand", "rand-utf8", "tracing", "tracing-subscriber" ]

# You probably won't use this directly, it is used by build.rs when
# cfg(build_wasm) is enabled.
build_integrity_wasm = [ "hdi", "serde" ]

# You probably won't use this directly, it is used by build.rs when
# cfg(build_wasm) is enabled.
build_coordinator_wasm = [ "hdi", "hdk", "serde" ]
