[package]
name = "hc_demo_cli"
version = "0.2.0-beta-rc.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

# reminder - do not use workspace deps
[dependencies]
cfg-if = "1.0"
clap = { version = "4.2.2", features = [
  "derive",
  "wrap_help",
], optional = true }
flate2 = { version = "1.0.25", optional = true }
hdi = { path = "../hdi", version = "^0.5.0-dev.14", optional = true }
hdk = { path = "../hdk", version = "^0.4.0-dev.16", optional = true }
holochain = { path = "../holochain", version = "^0.4.0-dev.22", optional = true, default-features = false }
holochain_types = { path = "../holochain_types", version = "^0.4.0-dev.22", optional = true }
holochain_keystore = { path = "../holochain_keystore", version = "^0.4.0-dev.20", optional = true }
rand = { version = "0.8.5", optional = true }
rand-utf8 = { version = "0.0.1", optional = true }
serde = { version = "1", optional = true }
tokio = { version = "1.27", features = ["full"], optional = true }
tracing = { version = "0.1.37", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true }

[dev-dependencies]
tempfile = "3.5.0"

# When building for the WASM target, we need to configure getrandom
# to use the host system for the source of crypto-secure randomness.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

# Special config for when we're in build_wasm mode
[target.'cfg(build_wasm)'.build-dependencies]
flate2 = "1.0.25"
wasm-opt = "0.116"

[lints]
workspace = true

[features]
default = ["build_demo", "wasmer_sys"]

# The default demo feature builds the actual demo lib / executable.
build_demo = [
  "clap",
  "flate2",
  "hdi",
  "hdk",
  "serde",
  "tokio",
  "holochain",
  "holochain_types",
  "holochain/test_utils",
  "holochain/tx5",
  "holochain/sqlite-encrypted",
  "holochain/metrics_influxive",
  "holochain_keystore",
  "rand",
  "rand-utf8",
  "tracing",
  "tracing-subscriber",
]

# You probably won't use this directly, it is used by build.rs when
# cfg(build_wasm) is enabled.
build_integrity_wasm = ["hdi", "serde"]

# You probably won't use this directly, it is used by build.rs when
# cfg(build_wasm) is enabled.
build_coordinator_wasm = ["hdi", "hdk", "serde"]

wasmer_sys = ["holochain/wasmer_sys"]
wasmer_wamr = ["holochain/wasmer_wamr"]
